<resources>
    <string name="app_name">miniTwitter</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_log_in">Log in</string>
    <string name="text_create_account">¿Dont you have account?, sign up</string>
    <string name="text_you_have_already_an_account">I already have an account</string>
    <string name="btn_sign_up">Sign up</string>
    <string name="hint_user_name">User name</string>
</resources>