<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_0f7edd"
    tools:context=".activities.login.LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginTop="32dp"
        app:layout_constraintBottom_toTopOf="@+id/et_username_signup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:srcCompat="@drawable/logo_minitwitter_white" />

    <EditText
        android:id="@+id/et_username_signup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:ems="10"
        android:hint="@string/hint_user_name"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHighlight="@color/blue_dark_FF075598"
        android:textColorHint="@color/blue_dark_FF075598"
        android:textColorLink="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/et_email_signup"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/et_email_signup"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        android:textColorHighlight="@color/blue_dark_FF075598"
        android:textColorHint="@color/blue_dark_FF075598"
        android:textColorLink="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/et_password_signup"
        app:layout_constraintEnd_toEndOf="@+id/et_username_signup"
        app:layout_constraintStart_toStartOf="@+id/et_username_signup"
        app:layout_constraintTop_toBottomOf="@+id/et_username_signup" />

    <EditText
        android:id="@+id/et_password_signup"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHighlight="@color/blue_dark_FF075598"
        android:textColorHint="@color/blue_dark_FF075598"
        android:textColorLink="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/btn_signup"
        app:layout_constraintEnd_toEndOf="@+id/et_email_signup"
        app:layout_constraintStart_toStartOf="@+id/et_email_signup"
        app:layout_constraintTop_toBottomOf="@+id/et_email_signup" />

    <Button
        android:id="@+id/btn_signup"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/white"
        android:text="@string/btn_sign_up"
        android:textColor="@color/blue_0f7edd"
        app:layout_constraintBottom_toTopOf="@+id/tv_already_account"
        app:layout_constraintEnd_toEndOf="@+id/et_password_signup"
        app:layout_constraintStart_toStartOf="@+id/et_password_signup"
        app:layout_constraintTop_toBottomOf="@+id/et_password_signup" />

    <TextView
        android:id="@+id/tv_already_account"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/text_you_have_already_an_account"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btn_signup"
        app:layout_constraintStart_toStartOf="@+id/btn_signup"
        app:layout_constraintTop_toBottomOf="@+id/btn_signup" />


</androidx.constraintlayout.widget.ConstraintLayout>